<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Easy Order</string>
    <string name="action_settings">Settings</string>
    <string name="Welcome">Welcome</string>
    <string name="btnordernow">Order Now</string>
    <string name="btnchkorders">Previous Orders</string>
    <string name="btncontactus">Contact Us</string>
    <string name="btnrating">Rate Us</string>
    <string name="title_activity_splash_activity">Splash_activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="btncheckout">Checkout</string>
    <string name="btnreset">Reset order</string>
    <string name="imgveg">Veg or Non-veg</string>
    <string name="imgadd">Add</string>
    <string name="imgproduct">Product</string>
    <string name="splashlabel">Easy order</string>
    <string name="splashtext">Fast-food made faster</string>
    <string name="btnpaynow">Pay now</string>
    <string name="fnamehint">First Name:</string>
    <string name="snamehint">Surname: </string>
    <string name="housenohint">House number:</string>
    <string name="postcodehint">Post Code (without any spaces)</string>
    <string name="creditcardhint">Card number (without any spaces)</string>
    <string name="emailhint">abc_02@xyz.com</string>
    <string name="btnsubmit">Submit</string>
    <string name="tsorder">Total payment due</string>
    <string name="lblthankyou">THANK YOU</string>
    <string name="lblorderplaced">Order placed</string>
    <string name="btnok">OK </string>
    <string name="lbl1">Contact Us</string>
    <string name="lbl2">Call Us: </string>
    <string name="lbl3">+44\-123\-456789</string>
    <string name="lbl4">Email Us:</string>
    <string name="lbl5">contact@easyorder.com</string>

</resources>