<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_cat"
    android:padding="10dp" >

    <TextView
        android:id="@+id/lbl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="7dp"
        android:text="@string/lbl1"
        android:textAlignment="center"
        android:textColor="@color/almond"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/lbl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lbl1"
        android:layout_margin="7dp"
        android:layout_marginTop="14dp"
        android:text="@string/lbl2"
        android:textColor="@color/almond"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/lbl3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/lbl2"
        android:layout_toRightOf="@+id/lbl2"
        android:text="@string/lbl3"
        android:textColor="@color/almond"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/lbl4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl2"
        android:layout_margin="7dp"
        android:text="@string/lbl4"
        android:textColor="@color/almond"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/lbl5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lbl4"
        android:layout_below="@+id/lbl4"
        android:text="@string/lbl5"
        android:textColor="@color/almond"
        android:textSize="22sp" />

</RelativeLayout>