<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_cat"
    android:padding="10dp" >

    <EditText
        android:id="@+id/txtfname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/fnamehint"
        android:inputType="textPersonName"
        android:textColor="@color/anti_flash_white"
        android:textColorHint="@color/anti_flash_white" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtsurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtfname"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/snamehint"
        android:inputType="textPersonName"
        android:textColor="@color/anti_flash_white"
        android:textColorHint="@color/anti_flash_white" />

    <EditText
        android:id="@+id/txthouseno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtsurname"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/housenohint"
        android:inputType="textPersonName"
        android:textColor="@color/anti_flash_white"
        android:textColorHint="@color/anti_flash_white" />

    <EditText
        android:id="@+id/txtpostcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txthouseno"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/postcodehint"
        android:inputType="textPostalAddress"
        android:textColor="@color/anti_flash_white"
        android:textColorHint="@color/anti_flash_white" />

    <EditText
        android:id="@+id/txtcreditcard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtpostcode"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/creditcardhint"
        android:inputType="number"
        android:textColor="@color/anti_flash_white"
        android:textColorHint="@color/anti_flash_white" />

    <EditText
        android:id="@+id/txtemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtcreditcard"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/emailhint"
        android:inputType="textEmailAddress"
        android:textColor="@color/anti_flash_white"
        android:textColorHint="@color/anti_flash_white" />

    <Button
        android:id="@+id/btnsubmit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtemail"
        android:layout_centerHorizontal="true"
        android:layout_margin="7dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/btnsubmit"
        android:textColor="@color/almond"
        android:textSize="23sp"
        android:textStyle="italic" />

</RelativeLayout>