<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/black_cat"
    android:gravity="center"
    android:padding="10dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnordernow"
        style="@android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/btnordernow"
        android:textColor="@color/almond"
        android:textSize="23sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnchkorders"
        style="@android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnordernow"
        android:layout_margin="7dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/btnchkorders"
        android:textColor="@color/almond"
        android:textSize="23sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btncontactus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnchkorders"
        android:layout_margin="7dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/btncontactus"
        android:textColor="@color/almond"
        android:textSize="23sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnrating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btncontactus"
        android:layout_margin="7dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/btnrating"
        android:textColor="@color/almond"
        android:textSize="23sp"
        android:textStyle="italic" />

</RelativeLayout>